Syntax Tree done for variable declaration